--- a/DB設計/アクセス制御 (操作権限管理) 設計.md
+++ b/DB設計/アクセス制御 (操作権限管理) 設計.md
@@ -47,7 +47,7 @@
 
 #### データモデルの例
 
-![](/My_doc/img/DB/アクセス管理/1.png)
+![](../img/DB/アクセス管理/1.png)
 
 データモデルの例
 
@@ -76,7 +76,7 @@
 
 #### データモデルの例
 
-![](/My_doc/img/DB/アクセス管理/2.png)
+![](../img/DB/アクセス管理/2.png)
 
 データモデルの例
 #### データの例
@@ -96,6 +96,7 @@
 |4|2 (user1)|1 (例: ユーザー管理)|0 (無)|
 |5|2 (〃)|2 (例: ○○登録)|1 (有)|
 |6|2 (〃)|3 (例: システム設定)|0 (無)|
+
 データの例 (ユーザー操作権限)。データが無い場合は 権限有無 = 0 (無) として扱っても可
 #### 適用前提・利点・欠点
 
@@ -118,7 +119,7 @@
 
 #### データモデルの例
 
-![](/My_doc/img/DB/アクセス管理/3.png)
+![](../img/DB/アクセス管理/3.png)
 
 データモデルの例
 
@@ -162,7 +163,7 @@
 
 #### データモデルの例
 
-![](/My_doc/img/DB/アクセス管理/4.png)
+![](../img/DB/アクセス管理/4.png)
 
 データモデルの例
 
@@ -229,7 +230,7 @@
 
 #### データモデルの例
 
-![](/My_doc/img/DB/アクセス管理/5.png)
+![](../img/DB/アクセス管理/5.png)
 
 データモデルの例
 
