add：書籍の用語について追記

--- a/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
+++ b/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
@@ -43,3 +43,34 @@
 - [structured\_analysis\.pdf](https://astah.change-vision.com/ja/tutorial/files/structured_analysis.pdf)
 - [構造化プログラミング、そしてオブジェクト指向プログラミングへ… \| ITの学び](https://itmanabi.com/structured-objectoriented-prog/)
 - [第6部　ソフトウェア開発の方法論](http://www.tamakiseoffice.jp/software_engineering/Chap_15.pdf)
+
+### XP（Extreme Programming）
+アジャイルソフトウェア開発手法。開発やマネジメントの経験則を適用の指針とともにまとめたもの。エクストリームプログラミングのメリットは柔軟性。
+
+要件定義からテストまでの流れを繰り返し、少しづつ完成度を高めていく過程でユーザーとのやり取りも多く行うため、ユーザーの要望や仕様変更に柔軟に対応できる。コミュニケーション、シンプル、フィードバック、勇気、尊重という５つの価値が提唱されている。
+
+- [エクストリームプログラミングとは一体？わかりやすく解説してみた \| CodeCampus](https://blog.codecamp.jp/programming-extreme-what-1)
+- [エクストリームプログラミング\(XP\)とは？わかりやすく解説！｜ITトレンド](https://it-trend.jp/development_tools/article/32-0023)
+
+### スクラム
+反復増加型ソフトウェア開発チームに適用するプロジェクト管理フレームワーク。
+プロジェクト管理的な作業に特化しているため、XPや統一プロセスなど設計、実装、テストの実践形態を規定しているさまざまな反復的な開発手法と組み合わせやすい開発手法。主には「プロダクトオーナー」、「スクラムマスター」、「開発メンバー」と呼ばれる役割が存在する。
+
+- [「アジャイル開発」と発展型「スクラム」を徹底解説！ – 株式会社ライトコード](https://rightcode.co.jp/blog/become-engineer/agile-development-scrum)
+- [スクラムによるアジャイル開発の進め方、従来手法とのギャップ \- Build Insider](https://www.buildinsider.net/enterprise/bookagile/0101)
+
+### イテレーション
+イテレーションとは一連の工程を短期間で繰り返す、開発サイクルのこと。短いスパンで開発手法を見直す「アジャイル開発」の一概念として知られている。  
+小さな単位に分けられた開発を「計画」→「設計」→「実装」→「テスト」と行いながら、機能のリリースを繰り返す。イテレーションの最後には当該イテレーションにおける成果物をリリースする。
+
+- [イテレーションとは？スプリントとの違いや開発プロセスを解説！｜ITトレンド](https://it-trend.jp/development_tools/article/32-0022)
+- [アジャイル開発とは？今さら聞けない開発手法のメリット・デメリット｜発注成功のための知識が身に付く【発注ラウンジ】](https://hnavi.co.jp/knowledge/blog/agile_software_development/)
+- [第2回　イテレーション設計における透明性：アジャイル トランスペアレンシー ～アジャイル開発における透明性の確保について～｜gihyo\.jp … 技術評論社](https://gihyo.jp/dev/serial/01/agile-transparency/0002)
+
+### スプリントバックログ
+スプリント期間（1～4週間）分を抜き出した「チームのタスクリスト」。  
+製品バックログアイテムを「完了」の増分に変換するために開発チームが何をする必要があるかを定義する。
+
+- [Graat（グラーツ）\-グロース・アーキテクチャ＆チームス株式会社](https://www.graat.co.jp/blogs/cjrli64jxsl500a72zlc0rgwb)
+- [スクラムのスプリントバックログとは何ですか？ What is Sprint Backlog in Scrum? : warren\_lynchのblog](http://agile.blog.jp/agile_scrum/14974352.html)
+- [5分で分かる、「スクラム」の基本まとめ：開発チームを改善するためのスクラムTips（8）（1/2 ページ） \- ＠IT](https://atmarkit.itmedia.co.jp/ait/articles/1208/07/news128.html)
