add：書籍『ずっと受けたかったソフトウェアエンジニアリングの新人研修』第二章の用語について追記

--- a/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
+++ b/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
@@ -74,3 +74,44 @@
 - [Graat（グラーツ）\-グロース・アーキテクチャ＆チームス株式会社](https://www.graat.co.jp/blogs/cjrli64jxsl500a72zlc0rgwb)
 - [スクラムのスプリントバックログとは何ですか？ What is Sprint Backlog in Scrum? : warren\_lynchのblog](http://agile.blog.jp/agile_scrum/14974352.html)
 - [5分で分かる、「スクラム」の基本まとめ：開発チームを改善するためのスクラムTips（8）（1/2 ページ） \- ＠IT](https://atmarkit.itmedia.co.jp/ait/articles/1208/07/news128.html)
+
+## 第二章
+### コーディング規約
+プログラマが守るべき、プログラムの書き方の作法を定めたもの。  
+複数のプログラマがコードを書く場合に記述方法を統一しておくことで、プログラムの保守性を高める。主にコメントの記述、変数名、変数の型、プログラムロジックなどの記述のルールなどを定める。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p128,131,132
+
+### 品質マネジメントシステム
+組織が顧客に対して提供する製品やサービスの品質を継続的に改善していく仕組みのこと。  
+品質改善というのは常に顧客から求められており、逆に品質を改善していくことで顧客満足を得る。
+
+ISO 9001の目的は、単に『良い製品を作ること』だけではなく、『よい製品（サービス）を作る（提供する）ためのシステムを管理すること。『よい製品･サービス』とは、『顧客の要求する製品、サービス』のこと。
+
+よい製品やサービスを提供することで、『お客さんに満足してもらうこと【顧客満足】』を目指す。
+
+- [QMS（品質管理システム）とは？わかりやすく解説 \| ISOプロ](https://activation-service.jp/iso/column/2001)
+- [品質を守る規格！品質管理システムとは \| ISOプロ](https://activation-service.jp/iso/column/1698)
+- [ISO9001とは（品質マネジメントシステム）](https://www.aims.co.jp/kiso/9001.htm)
+
+### 情報セキュリティマネジメントシステム
+組織のマネジメントとして、自らのリスクアセスメントにより必要なセキュリティレベルを決め、プランを持ち、資源を配分して、システムを運用すること。  
+組織内における情報の「機密性」、「完全性」、「可用性」、いわゆる情報セキュリティの3要素を確保することとされている。
+
+ISMSを正しく理解するために、情報セキュリティの3要素を確認しておく必要がある。機密性は情報を外部に漏らさないこと、完全性は情報が改ざん・削除されないことや情報の処理方法が正しいこと、可用性は権限を持つ人がいつでも情報にアクセスできることを意味する。
+
+- [ISMS（情報セキュリティマネジメントシステム）とは \- 情報マネジメントシステム認定センター（ISMS\-AC）](https://isms.jp/isms/)
+- [ISMS（情報セキュリティマネジメントシステム） \| サイバーセキュリティ情報局](https://eset-info.canon-its.jp/malware_info/term/detail/00117.html)
+- [ISMS（情報セキュリティマネジメントシステム）の意味とは？](https://orange-operation.jp/pos/13372.html)
+
+### SLCP（Software Life Cycle Process）
+もともと異なる文化を持つ顧客と開発企業が、システム開発の一連の流れを同じ視点で理解し、コミュニケーションに不自由がないよう策定された、システム開発に関する言葉、尺度、手順などの枠組み。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p42
+
+### システム提案書
+システム開発企業が顧客に対して、システム開発の全体像を説明するための文書。  
+顧客は、この文書からシステムの全体像や機能、業務や経済上のメリット、必要経費、稼働時期などを読み取り、発注するかどうかを決定する。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p42
+
