add：書籍『ずっと受けたかったソフトウェアエンジニアリングの新人研修』第三章の用語について追記

--- a/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
+++ b/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
@@ -115,3 +115,29 @@ ISMSを正しく理解するために、情報セキュリティの3要素を確
 
 - ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p42
 
+## 第三章
+### ステークホルダ
+企業経営における利害関係者。例としては、株主・経営者・従業員・顧客・取引先などが挙げられる。  
+企業などの経営において、利害関係を有する者を指します。企業は持続的な成長の基盤として、あらゆるステークホルダーと良好な関係を構築することが求められる。
+
+- [ステークホルダーって何？ 正しい意味と使い方を例文つきで理解しよう \| ビジネスマナー \| ビジネス用語 \| フレッシャーズ マイナビ 学生の窓口](https://gakumado.mynavi.jp/freshers/articles/43581)
+- [知っているようで知らない？「ステークホルダー」の正しい意味と用法 \| リクナビNEXTジャーナル](https://next.rikunabi.com/journal/20180918_s01/)
+- [ステークホルダーとは？　利害関係者との関わり方をしっかり考えよう \| 起業tv](https://kigyotv.jp/news/stakeholder/)
+
+### ブレーンストーミング
+グループディスカッションによってアイデアを引き出す手法のひとつ。  
+集団でアイデアを出すことで互いに刺激をしあい、その場で創造的な発想を生むのがブレストの目的。考え方の違うメンバーであることが望ましい。
+
+- [10 分でマスターできるブレインストーミング｜アイデアはこうして生まれる](https://navi.dropbox.jp/brainstorming)
+- [ブレインストーミングとは？失敗しない進め方と7つの発想モデル \- Web活用術。](https://swingroot.com/brain-storming/)
+- [ブレインストーミング（ブレスト）とは？意味とやり方・成功に導くルールを徹底解説 \| ボクシルマガジン](https://boxil.jp/mag/a1607/)
+
+
+
+### RFP（Request For Proposal：提案依頼書）
+発注企業が受託企業に対し、提案して欲しい内容を記載した資料のこと。  
+発注側企業のIT担当者や情報システム部門の担当者が、SIerやシステムベンダーに対してシステム構築・リプレイスを依頼する際に、自社システムに必要な要件や実現したい業務（解決したい課題とあるべき姿）などを示す書類。
+
+- [提案依頼書（RFP）とは？作成方法とテンプレートサイト5選を紹介｜ferret](https://ferret-plus.com/2073)
+- [RFPとは？提案依頼書の基本を解説｜株式会社NTTデータビジネスシステムズ](https://www.nttdata-bizsys.co.jp/column/2019/000599.html)
+- [RFP（提案依頼書）とは？コンサルが教えるRFPの全知識と必要性](https://it-koala.com/rfp-629)
