add：書籍『ずっと受けたかったソフトウェアエンジニアリングの新人研修』第四章の用語について追記

--- a/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
+++ b/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
@@ -141,3 +141,53 @@ ISMSを正しく理解するために、情報セキュリティの3要素を確
 - [提案依頼書（RFP）とは？作成方法とテンプレートサイト5選を紹介｜ferret](https://ferret-plus.com/2073)
 - [RFPとは？提案依頼書の基本を解説｜株式会社NTTデータビジネスシステムズ](https://www.nttdata-bizsys.co.jp/column/2019/000599.html)
 - [RFP（提案依頼書）とは？コンサルが教えるRFPの全知識と必要性](https://it-koala.com/rfp-629)
+
+## 第四章
+### CRUS図
+CRUD図とは、データがどの機能で作成(Create)、参照(Read)、更新(Update)及び削除(Delete)されるかをマトリックス形式で表現したもの。  
+処理とデータの関係が明らかになるので、テーブルの仕様が変更されたとき、どの処理に影響がでるのか判断することができる。 
+
+結合テスト段階での DB マイグレーション時のトラブル、マスタの登録処理抜け、スタブテストデータの削除忘れ、データの二重登録、さらにはテー ブル設計の問題により、特定のテーブルへの過剰な負荷による非機能要件であるレスポンス問題、再度正規化やテーブル 分割を余儀なくされるなどのリスクを軽減できる。
+
+- [CRUD図の読み方と書き方](http://itref.fc2web.com/technology/crud.html)
+- [設計｜DFD, CRUD, ER図の目的と書き方 \- わくわくBank](https://www.wakuwakubank.com/posts/448-design-dfd-crud-er/#crud)
+- [CRUD\.pdf](https://astah.change-vision.com/ja/tutorial/files/CRUD.pdf)
+
+### 論理データ設計
+プログラムが保持するデータやデータ間の関連、データベースの構造を定義するために行う作業。  
+データの構造や関係を図で表現し、処理に適したデータの構造を作る。論理データ設計で用いる代表的な図法に「ER図」とCRUD図」などがある。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p91
+
+### システムインタフェース設計
+外部のシステムに渡すデータや受け取るデータの使用を定義する。  
+ファイル仕様には、文字コード、改行コード、フィールド構成、値のタイプ、空データの可否、最大レコード数などを記述する。
+
+データ交換仕様には、使用するネットワーク媒体の種類、トランスポートプロトコル、アプリケーションプロトコル、またファイル仕様に準じて交換するデータ形式などを記述する。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p93,94
+
+### サマリ
+サマリーとは英単語の「summary」から来ていて、日本語にすると、あるものごとの内容の「まとめ」「概要」「要約」などの意味の言葉。  
+IT分野では、「サマリー」は「大規模なデータや長い文章の要約」という意味の他に、「サーチエンジンの検索結果に表示されるサイトの要約文」という意味もある。
+
+使い方としては、報告書や論文を作成した際、おおまかに内容を把握するために「サマリーを付けて」と言う場合がある。相手が「すぐに概要を理解したいので内容をまとめてほしい」というニーズによるもの。
+
+- [知らないと恥ずかしい？ ビジネスでのサマリーの意味と使い方って？ 例文つきで解説【スグ使えるビジネス用語集】](https://gakumado.mynavi.jp/freshers/articles/43107)
+- [令和フリーランス](https://kuguru.jp/)
+- [「サマリー」の意味とは？医療など分野別の解説に書き方のポイント \| TRANS\.Biz](https://biz.trans-suite.jp/22698)
+
+### セキュリティ設計
+インターネットで公開するWebベースのシステムならば、クロスサイトスクリプティングやSQLインジェクションといった攻撃を防ぐ方法を定義する。  
+また、高度なデータセキュリティを要する用途では、様々な手法を使ってコンピュータから情報を盗み出そうとする勢力に対して、情報を防御売る機能、いわゆる「耐タンパ性」を高める方法などを定義する。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p113
+
+### 耐タンパ性
+ソフトウェアやハードウェアの内部構造や記憶しているデータなどの解析の困難な状態のこと。  
+耐タンパ性が高いほどセキュリティレベルも高い。耐タンパ性を高める技術には，論理的な手段と物理的な手段の2種類がある。
+
+例えば，ソフトウエアであれば，逆アセンブラなどで簡単に解析できないようにする難読化技術などである。ハードウエアであれば，LSIを解析するために保護層をはがすと，内部の回路まで破壊されるようにする技術などがある。
+
+- [耐タンパ性 \| 日経クロステック（xTECH）](https://xtech.nikkei.com/dm/article/WORD/20060517/117170/)
+- [耐タンパ性](http://www.chuu-information.com/security/gyou_ta_8.html)
