add：書籍『ずっと受けたかったソフトウェアエンジニアリングの新人研修』第五章の用語について追記

--- a/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
+++ b/Business/Books/ずっと受けたかったソフトウェアエンジニアリングの新人研修.md
@@ -191,3 +191,37 @@ IT分野では、「サマリー」は「大規模なデータや長い文章の
 
 - [耐タンパ性 \| 日経クロステック（xTECH）](https://xtech.nikkei.com/dm/article/WORD/20060517/117170/)
 - [耐タンパ性](http://www.chuu-information.com/security/gyou_ta_8.html)
+
+## 第五章
+### オフショア開発
+アプリケーションやソフトウェアなどの開発業務を海外委託・発注する手法。  
+海外の開発会社や海外子会社にアウトソースすることで、開発コストを削減する。
+
+現地の言葉がわからず会話によるコミュニケーションが取りづらいことや、仕様書の翻訳や情報共有などに多くの手間がかかることもあります。  
+また、場所によっては時差が原因で打ち合わせをしにくいことや緊急時に即座に連絡が取りあえないというリスクもある。
+
+- [オフショア開発とは？選ばれる理由と失敗を防ぐために知るべき課題](https://www.offshore-kaihatsu.com/faq/)
+- [オフショア開発とは？課題・メリット・現状 \- 失敗するワケと注意点 \| ボクシルマガジン](https://boxil.jp/mag/a2789/)
+- [オフショア開発で失敗しないためのポイントと、おすすめのシステム開発会社10社【2021年版】｜発注成功のための知識が身に付く【発注ラウンジ】](https://hnavi.co.jp/knowledge/blog/offshore_companies/)
+
+### ホワイトボックステスト
+プログラムの内部構造が分かっていることを前提としたテスト。  
+プログラム上のすべての処理を網羅するテストデータの集合を作り、一つずつ入力しながら、プログラムの実行を繰り返し、すべての入力データに対して期待通りの結果が得られるかどうかを確認する。
+
+プログラムが複雑になるほど、処理の流れを網羅するためのテストデータの作成が難しくなる。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p136
+
+### ドライバとスタブ
+テスト実行時に、呼び出し先が未完成等のときに代替として使用する。  
+これらのダミークラスには主に「ドライバ」と「スタブ」があり、テスト対象から見て「呼ばれる方」「呼ぶ方」の違いがある。テスト対象のクラスを呼び出す側を「ドライバ」呼ばれるクラスを「スタブ」と呼び、これらを一時的に作成して試験を行う。
+
+- [ドライバとスタブの違い](http://tooljp.com/windows/chigai/html/Programming/driver-stub-chigai.html)
+- [スタブとドライバの違い \| ITSakura](https://itsakura.com/it-stub-driver)
+- [スタブとドライバは正反対 \| ITの学び](https://itmanabi.com/stub-driver/)
+
+### ブラックボックステスト
+プログラムの内部構造には関知せず、入力と出力の対応が正しいことを確認するテスト方法。  
+結合テストに際に採用される。品質を確保するには十分なテストが必要になる。代表的な技法として、同値分割、境界値分析、エラー推測などの技法がある。
+
+- ずっと受けたかったソフトウェアエンジニアリングの新人研修 参照:p146,147
