add：経済成長率について追記

--- a/Business/Books/1分間ピケティ.md
+++ b/Business/Books/1分間ピケティ.md
@@ -16,14 +16,14 @@
 資本（資産）が生み出す利益率のこと。  
 例：1億円のマンションを貸し、年間1000万円の収益を得た場合、資本収益率は10%になる。
 - 経済成長率 (g)  
-実質GDP（国内総生産）の成長率のこと。最近の日本はおよそ1～2%。
+実質GDP（国内総生産）の成長率のこと。最近の日本はおよそ1～2%。  
+経済成長率は先進国に追いつくにつれて、1～1.5%に落ち着く。
 
 ### 資本所得 と 労働所得
 - 資本所得  
 資本（財産、資産、富）から得られる所得のこと。
 - 労働所得  
 働いて得る収入（賃金、給与、賞与）のこと。
-
 
 ### 勝ち組になるには、資本所得を増やす
 貯蓄には、定期預金だけでなく自社株や投資信託の購入積み立てなど多くの選択肢があり、リスクを伴うがドルコスト平均法（定額購入法）にすればリスクを低減できる。  
