add：ドルコスト平均法について追記

--- a/Business/Books/1分間ピケティ.md
+++ b/Business/Books/1分間ピケティ.md
@@ -27,3 +27,7 @@
 
 ### 勝ち組になるには、資本所得を増やす
 貯蓄には、定期預金だけでなく自社株や投資信託の購入積み立てなど多くの選択肢があり、リスクを伴うがドルコスト平均法（定額購入法）にすればリスクを低減できる。  
+
+### 積立投資 (ドルコスト平均法)
+一定の金額で定期的に金融商品を購入する投資方法であり、長期的な資産形成に向いている。 　
+定額購入により、価格が低いときの購入量は多くなり、価格が高いときの購入量は少なくなるためリスクを低減することができる。
