add：投資信託について追記

--- a/Business/Books/1分間ピケティ.md
+++ b/Business/Books/1分間ピケティ.md
@@ -31,3 +31,7 @@
 ### 積立投資 (ドルコスト平均法)
 一定の金額で定期的に金融商品を購入する投資方法であり、長期的な資産形成に向いている。 　
 定額購入により、価格が低いときの購入量は多くなり、価格が高いときの購入量は少なくなるためリスクを低減することができる。
+
+### 投資信託
+投資家から集めたお金をひとつの大きな資金としてまとめ、運用の専門家が株式や債券などに投資・運用し、得た利益を投資家に還元する金融商品のこと。
+
